--- a/my-first-angular/src/app/greeting/greeting.component.html
+++ b/my-first-angular/src/app/greeting/greeting.component.html
@@ -11,5 +11,5 @@
         <li>Please log in.</li>
     }
 
-    <p [class] = 'classCss'>This is dynamic class !</p>
+    <p [class] = 'classCss'>The sum of two + two + four is {{2+2+4}}</p>
 </ul>
